# oncrpc

./: CMakeLists.txt  Howto.txt  liboncrpc_VC11.vcxproj  liboncrpc_VC11.vcxproj.filters  liboncrpc_VC14.vcxproj  liboncrpc_VC15.vcxproj  liboncrpc_VC17.vcxproj  liboncrpc_VC22.vcxproj  liboncrpc_VC8.vcproj  liboncrpc_VC9.vcproj  oncrpc.cpp  oncrpc.dsp  oncrpc_VC11.sln  oncrpc_VC11.vcxproj  oncrpc_VC11.vcxproj.filters  oncrpc_VC14.sln  oncrpc_VC14.vcxproj  oncrpc_VC15.sln  oncrpc_VC15.vcxproj  oncrpc_VC17.sln  oncrpc_VC17.vcxproj  oncrpc_VC22.sln  oncrpc_VC22.vcxproj  oncrpc_VC7.vcproj  oncrpc_VC7_0.vcproj  oncrpc_VC8.sln  oncrpc_VC8.vcproj  oncrpc_VC8.vsprops  oncrpc_VC8_R16.vsprops  oncrpc_VC9.sln  oncrpc_VC9.vcproj
include/rpc/: RPC.H  RPC_MSG.H  SVC.H  TYPES.H  afm_platform.h  auth.h  auth_uni.h  bcopy.h  clnt.h  netdb.h  pmap_cln.h  pmap_pro.h  pmap_rmt.h  rpc.h  rpc_msg.h  svc.h  svc_auth.h  types.h  xdr.h
src/: auth_non.c  auth_uni.c  authunix.c  bcopy.c  bindresv.c  clnt_gen.c  clnt_per.c  clnt_raw.c  clnt_sim.c  clnt_tcp.c  clnt_udp.c  get_myad.c  getrpcen.c  getrpcpo.c  nt.c  oncrpc.def  pmap_cln.c  pmap_get.c  pmap_gma.c  pmap_pr.c  pmap_pro.c  pmap_rmt.c  portmap.c  rpc_call.c  rpc_comm.c  rpc_prot.c  svc.c  svc_auth.c  svc_autu.c  svc_raw.c  svc_run.c  svc_simp.c  svc_tcp.c  svc_udp.c  xdr.c  xdr_arra.c  xdr_floa.c  xdr_mem.c  xdr_rec.c  xdr_refe.c  (+1 more)
